--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,19 @@
----
-name: Graph-Flowchart
-version: 0.09
-version_from: lib/Graph/Flowchart.pm
-license: gpl
+abstract: Generate easily flowcharts as Graph::Easy objects
+author: Tels <nospam-abuse@bloodgate.com>
+build_requires: 
+  Test::More: 0.42
 distribution_type: module
-generated_by: Graph-Flowchart version 0.09
-installdirs: site
-requires:
-  Graph::Easy: 0.4
+generated_by: Module::Install version 0.64
+license: gpl
+name: Graph-Flowchart
+no_index: 
+  directory: 
+    - examples
+    - inc
+    - t
+recommends: 
+  Graph::Easy::As_svg: 0.22
+  Graph::Easy::Manual: 0.36
+requires: 
+  Graph::Easy: 0.52
+version: 0.10
